# secur-ai-backend-fastapi

./: .gitignore  package.json  pyproject.toml
src/app/: main.py
src/app/ner/routers/: __init__.py  router.py
src/app/ner/schemas/: __init__.py  entity.py  entityLabel.py  extract_request.py  extract_response.py
src/app/ner/services/: __init__.py  base.py  gliner.py  presidio.py
