[project]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ilcann",email = "ilcan21@itu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend_fastapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
