[project]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ilcann",email = "ilcan21@itu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "gliner (>=0.2.22,<0.3.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
